src/objects/EC_Question__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component_Id__c</fullName>
        <description>Used in ODU Table to help determine what component it is</description>
        <label>Component Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Type__c</fullName>
        <inlineHelpText>This field will display type of Configuration Form this Question related to</inlineHelpText>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Lookup_Val__c</fullName>
        <label>Contact_Lookup Val</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact lookup</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EC Questions</relationshipLabel>
        <relationshipName>EC_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decimal_10__c</fullName>
        <label>Decimal_10</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decimal_4__c</fullName>
        <label>Decimal_4</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclude_from_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <label>HelpText</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_Advisories__c</fullName>
        <description>List of recommendations provided to the customer as a result of the assessment</description>
        <inlineHelpText>List of recommendations provided to the customer as a result of the assessment. Select all that apply</inlineHelpText>
        <label>Multiselect_Advisories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>301 Environment - Environment Setup Advisory</fullName>
                </value>
                <value>
                    <fullName>302 Platform - Capacity Planning Advisory</fullName>
                </value>
                <value>
                    <fullName>301 Environment - Clustered Configuration Advisory​</fullName>
                </value>
                <value>
                    <fullName>301 Environment - Operating System Migration Advisory</fullName>
                </value>
                <value>
                    <fullName>302 Platform - Upgrade Advisory</fullName>
                </value>
                <value>
                    <fullName>302 Platform - Conversion Advisory</fullName>
                </value>
                <value>
                    <fullName>302 Platform - Platform Performance Advisory</fullName>
                </value>
                <value>
                    <fullName>302 Platform - Upgrade Implementation ​</fullName>
                </value>
                <value>
                    <fullName>303 Intelligence Center - Intelligence Center Advisory</fullName>
                </value>
                <value>
                    <fullName>304 Digital Identity - Digital Identity Advisory</fullName>
                </value>
                <value>
                    <fullName>305 Analytics - Analytics Advisory</fullName>
                </value>
                <value>
                    <fullName>306 Application - Application Start Up</fullName>
                </value>
                <value>
                    <fullName>306 Application - Application Design Advisory</fullName>
                </value>
                <value>
                    <fullName>307 Mobile - Mobile Start Up</fullName>
                </value>
                <value>
                    <fullName>307 Mobile - ​Mobile Design and Deployment Advisory​</fullName>
                </value>
                <value>
                    <fullName>308 Embedded Analytics - ​Embedded Analytics Advisory</fullName>
                </value>
                <value>
                    <fullName>309 Departmental Intelligence - Departmental Analytics Advisory​</fullName>
                </value>
                <value>
                    <fullName>309 Departmental Intelligence - Self-Service and Data Discovery Advisory</fullName>
                </value>
                <value>
                    <fullName>309 Departmental Intelligence - Advanced Analytics Advisory</fullName>
                </value>
                <value>
                    <fullName>309 Departmental Intelligence - Advanced Analytics Start Up</fullName>
                </value>
                <value>
                    <fullName>310 Intelligence Operation - Intelligence Operation Advisory</fullName>
                </value>
                <value>
                    <fullName>310 Intelligence Operation - ​​Project Assurance Advisory</fullName>
                </value>
                <value>
                    <fullName>311 Administration - Administration Advisory</fullName>
                </value>
                <value>
                    <fullName>312 Security - User Management Advisory</fullName>
                </value>
                <value>
                    <fullName>312 Security - Application Security Advisory​​​</fullName>
                </value>
                <value>
                    <fullName>313 Database Management and ETL - Database Management Advisory</fullName>
                </value>
                <value>
                    <fullName>313 Database Management and ETL - Big Data Advisory</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>License Expansion</fullName>
                </value>
                <value>
                    <fullName>License Conversion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_AppServices__c</fullName>
        <description>List of application services from map of the Intelligent Enterprise</description>
        <inlineHelpText>List of application services from map of the Intelligent Enterprise</inlineHelpText>
        <label>Multiselect_AppServices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intelligence</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Telemetry</fullName>
                </value>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Geospacial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_Certs__c</fullName>
        <label>Multiselect_Certs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U 320 MCA Certified Architect</fullName>
                </value>
                <value>
                    <fullName>U 321 ICD Intelligence Director</fullName>
                </value>
                <value>
                    <fullName>U 322 APA Application Architect</fullName>
                </value>
                <value>
                    <fullName>U 323 ANA Analytics Architect</fullName>
                </value>
                <value>
                    <fullName>U 324 MBA Mobile Architect</fullName>
                </value>
                <value>
                    <fullName>U 325 IDA Identity Architect</fullName>
                </value>
                <value>
                    <fullName>U 326 ASA Services Architect</fullName>
                </value>
                <value>
                    <fullName>U 327 DBA Database Architect</fullName>
                </value>
                <value>
                    <fullName>U 328 PLA Platform Administrator</fullName>
                </value>
                <value>
                    <fullName>U 329 SYA System Administrator ^</fullName>
                </value>
                <value>
                    <fullName>U 330 ESA Enterprise Support Architect</fullName>
                </value>
                <value>
                    <fullName>U 331 ETA ETL Architect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_Database__c</fullName>
        <label>Multiselect_Database</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actian Ingres 10.1</fullName>
                </value>
                <value>
                    <fullName>Actian Matrix 5.1</fullName>
                </value>
                <value>
                    <fullName>Actian Matrix 5.2</fullName>
                </value>
                <value>
                    <fullName>Actian Vector 4</fullName>
                </value>
                <value>
                    <fullName>Amazon Aurora Amazon EMR</fullName>
                </value>
                <value>
                    <fullName>Amazon Redshift</fullName>
                </value>
                <value>
                    <fullName>Apache Hive 1.x</fullName>
                </value>
                <value>
                    <fullName>Apache Spark SQL 1.x</fullName>
                </value>
                <value>
                    <fullName>Arcadia Data 1.1</fullName>
                </value>
                <value>
                    <fullName>Cassandra 2.1</fullName>
                </value>
                <value>
                    <fullName>Cirro 1.x</fullName>
                </value>
                <value>
                    <fullName>Cisco Data Virtualization 7</fullName>
                </value>
                <value>
                    <fullName>Cisco Data Virtualization 6.2</fullName>
                </value>
                <value>
                    <fullName>Clipboard</fullName>
                </value>
                <value>
                    <fullName>Cloudera CDH 5.x</fullName>
                </value>
                <value>
                    <fullName>DataDirect Cloud</fullName>
                </value>
                <value>
                    <fullName>Denodo 5.0</fullName>
                </value>
                <value>
                    <fullName>Dropbox</fullName>
                </value>
                <value>
                    <fullName>EnterpriseDB 9.x</fullName>
                </value>
                <value>
                    <fullName>EXAsolution 50</fullName>
                </value>
                <value>
                    <fullName>EXAsolution 4.2</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>File from Disk</fullName>
                </value>
                <value>
                    <fullName>File from URL</fullName>
                </value>
                <value>
                    <fullName>Google Analytics</fullName>
                </value>
                <value>
                    <fullName>Google BigQuery</fullName>
                </value>
                <value>
                    <fullName>Google Drive</fullName>
                </value>
                <value>
                    <fullName>Hbase via Phoenix 4.x</fullName>
                </value>
                <value>
                    <fullName>Hortonworks HDP 2.x</fullName>
                </value>
                <value>
                    <fullName>HP Vertica 7.2.x</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_Departments__c</fullName>
        <label>Multiselect_Departments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_IServer__c</fullName>
        <label>Multiselect_IServer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Anonymous (Guest)</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>LDAP</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Trusted Authentication</fullName>
                </value>
                <value>
                    <fullName>Usher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_MAT__c</fullName>
        <label>Multiselect_MAT</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AppConfig iOS</fullName>
                </value>
                <value>
                    <fullName>AppConfig Android</fullName>
                </value>
                <value>
                    <fullName>Integrated with AirWatch iOS</fullName>
                </value>
                <value>
                    <fullName>Integrated with AirWatch Android</fullName>
                </value>
                <value>
                    <fullName>Integrated with BlackBerry iOS OR Integrated with MobileIron iOS</fullName>
                </value>
                <value>
                    <fullName>Microsoft Intune</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_MDX__c</fullName>
        <label>Multiselect_MDX</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP BW 3.1, 3.5, and 7.0</fullName>
                </value>
                <value>
                    <fullName>Microsoft Analysis Services 2000</fullName>
                </value>
                <value>
                    <fullName>Microsoft Analysis Services 2005 and 2008</fullName>
                </value>
                <value>
                    <fullName>Hyperion 7.x EDS/Hyperion 9.1 or 9.2 HAS XMLA Provider with Essbase Server 7.1</fullName>
                </value>
                <value>
                    <fullName>Hyperion 11 APS XMLA Provider with Essbase Server 11</fullName>
                </value>
                <value>
                    <fullName>Hyperion 9.3 APS XMLA Provider with Essbase Server 9.3</fullName>
                </value>
                <value>
                    <fullName>Hyperion 9.3 APS XMLA Provider with Essbase Server 9.2, 9.1, or 7.1.x</fullName>
                </value>
                <value>
                    <fullName>IBM Cognos TM1 9.5.x or 9.4.1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_MobileServer__c</fullName>
        <label>Multiselect_MobileServer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Anonymous (Guest)</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>LDAP</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Trusted Authentication</fullName>
                </value>
                <value>
                    <fullName>Usher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_NCServer__c</fullName>
        <label>Multiselect_NCServer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Anonymous (Guest)</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>LDAP</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Trusted Authentication</fullName>
                </value>
                <value>
                    <fullName>Usher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_NC__c</fullName>
        <label>Multiselect_NC</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wifi</fullName>
                </value>
                <value>
                    <fullName>3G</fullName>
                </value>
                <value>
                    <fullName>4G</fullName>
                </value>
                <value>
                    <fullName>LTE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_NS__c</fullName>
        <label>Multiselect_NS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apple iOS 8.x</fullName>
                </value>
                <value>
                    <fullName>Apple iOS 9.x</fullName>
                </value>
                <value>
                    <fullName>Google Android 4.4.x</fullName>
                </value>
                <value>
                    <fullName>Google Android 5.x</fullName>
                </value>
                <value>
                    <fullName>Google Android 6.x</fullName>
                </value>
                <value>
                    <fullName>Google Android 7.x</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_Patches__c</fullName>
        <label>Multiselect_Patches</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10.0.0 Hotfix 1 Patch 10</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Hotfix 1 Patch 11</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Hotfix 1 Patch 12</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Hotfix 1 Patch 13</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Hotfix 1 Patch 2</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Hotfix 1 Patch 3</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Hotfix 1 Patch 4</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Hotfix 1 Patch 5</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Hotfix 1 Patch 6</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Hotfix 1 Patch 7</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Hotfix 1 Patch 8</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Hotfix 1 Patch 9</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Patch 1</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Patch 2</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Patch 3</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Patch 4</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Patch 5</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Patch 6</fullName>
                </value>
                <value>
                    <fullName>10.0.0 Patch 7</fullName>
                </value>
                <value>
                    <fullName>10.1.0 Hotfix 1 Patch 1</fullName>
                </value>
                <value>
                    <fullName>10.1.0 Hotfix 1 Patch 10</fullName>
                </value>
                <value>
                    <fullName>10.1.0 Hotfix 1 Patch 11</fullName>
                </value>
                <value>
                    <fullName>10.1.0 Hotfix 1 Patch 12</fullName>
                </value>
                <value>
                    <fullName>10.1.0 Hotfix 1 Patch 13</fullName>
                </value>
                <value>
                    <fullName>10.1.0 Hotfix 1 Patch 14</fullName>
                </value>
                <value>
                    <fullName>10.1.0 Hotfix 1 Patch 15</fullName>
                </value>
                <value>
                    <fullName>10.1.0 Hotfix 1 Patch 16</fullName>
                </value>
                <value>
                    <fullName>10.1.0 Hotfix 1 Patch 17</fullName>
                </value>
                <value>
                    <fullName>10.1.0 Hotfix 1 Patch 18</fullName>
                </value>
                <value>
                    <fullName>10.1.0 Hotfix 1 Patch 19</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_PlatServices__c</fullName>
        <description>List of platform services from map of the intelligent enterprise</description>
        <inlineHelpText>List of platform services from map of the intelligent enterprise</inlineHelpText>
        <label>Multiselect_PlatServices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Optimize Connectivity</fullName>
                </value>
                <value>
                    <fullName>Multi-Source</fullName>
                </value>
                <value>
                    <fullName>Parallel Processing</fullName>
                </value>
                <value>
                    <fullName>Multi-Node Server Cluster</fullName>
                </value>
                <value>
                    <fullName>Caching</fullName>
                </value>
                <value>
                    <fullName>Fail-Over</fullName>
                </value>
                <value>
                    <fullName>Compute Elasticity</fullName>
                </value>
                <value>
                    <fullName>Drivers + Gateways</fullName>
                </value>
                <value>
                    <fullName>Platform Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_SPAC__c</fullName>
        <label>Multiselect_SPAC</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DisableEmail</fullName>
                </value>
                <value>
                    <fullName>DisableOpenIn</fullName>
                </value>
                <value>
                    <fullName>DisablePrint</fullName>
                </value>
                <value>
                    <fullName>DisableCopyPaste</fullName>
                </value>
                <value>
                    <fullName>DisableCameraAccess</fullName>
                </value>
                <value>
                    <fullName>DisableLocationServices</fullName>
                </value>
                <value>
                    <fullName>DisableSaveToPhotos</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_Tools__c</fullName>
        <label>Multiselect_Tools</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>System Manager</fullName>
                </value>
                <value>
                    <fullName>Integrity Manager</fullName>
                </value>
                <value>
                    <fullName>Object Manager</fullName>
                </value>
                <value>
                    <fullName>Command Manager</fullName>
                </value>
                <value>
                    <fullName>Configuration Wizard</fullName>
                </value>
                <value>
                    <fullName>Connectivity Wizard</fullName>
                </value>
                <value>
                    <fullName>Cube Advisor</fullName>
                </value>
                <value>
                    <fullName>Database Query Tool</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Desktop</fullName>
                </value>
                <value>
                    <fullName>Enterprise Manager</fullName>
                </value>
                <value>
                    <fullName>Language Manager</fullName>
                </value>
                <value>
                    <fullName>License Manager</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Architect</fullName>
                </value>
                <value>
                    <fullName>Mobile Administrator</fullName>
                </value>
                <value>
                    <fullName>Narrowcast Administrator</fullName>
                </value>
                <value>
                    <fullName>Network Manager</fullName>
                </value>
                <value>
                    <fullName>Office Package Wizard</fullName>
                </value>
                <value>
                    <fullName>Repository Translation Wizard</fullName>
                </value>
                <value>
                    <fullName>ScanMD</fullName>
                </value>
                <value>
                    <fullName>Service Manager</fullName>
                </value>
                <value>
                    <fullName>User Merge Wizard</fullName>
                </value>
                <value>
                    <fullName>Warehouse Catalog</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy Web</fullName>
                </value>
                <value>
                    <fullName>Web Administrator</fullName>
                </value>
                <value>
                    <fullName>Xquery Editor and Generator</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Library Mobile</fullName>
                </value>
                <value>
                    <fullName>Library Web</fullName>
                </value>
                <value>
                    <fullName>Workstation</fullName>
                </value>
                <value>
                    <fullName>Project Merge Wizard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_Type__c</fullName>
        <label>Multiselect_Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apple iPad</fullName>
                </value>
                <value>
                    <fullName>Apple iPhone</fullName>
                </value>
                <value>
                    <fullName>Android Tablet</fullName>
                </value>
                <value>
                    <fullName>Android Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiselect_WebServer__c</fullName>
        <label>Multiselect_WebServer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Anonymous (Guest)</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>LDAP</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Trusted Authentication</fullName>
                </value>
                <value>
                    <fullName>Usher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_10__c</fullName>
        <label>Number_10</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_18__c</fullName>
        <label>Number_18</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>